--- a/src/components/navbar/Navbar.module.scss
+++ b/src/components/navbar/Navbar.module.scss
@@ -1,5 +1,21 @@
+@import '../Variables.scss';
+
 .container {
   display: flex;
   justify-content: center;
-  border: 1px solid red;
+  align-items: center;
+  padding: 30px;
+  gap: 50px;
+}
+.link {
+  font-size: 25px;
+  font-weight: bold;
+  letter-spacing: 1px;
+  transition: $transition;
+  &:hover {
+    color: $white-text-hover;
+  }
+  &.active {
+    color: $active-link;
+  }
 }
