Home page static content + Navbar + footer

--- a/src/components/common/positioning/PageContainer.module.scss
+++ b/src/components/common/positioning/PageContainer.module.scss
@@ -5,6 +5,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  padding: 0px 30px;
-  gap: 50px;
+  flex: 1;
+  padding: 50px 30px;
+  gap: 30px;
 }
