--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -2,6 +2,8 @@ html,
 body,
 #__next,
 main {
+  display: flex;
+  flex-direction: column;
   padding: 0;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
