--- a/src/components/footer/Footer.module.scss
+++ b/src/components/footer/Footer.module.scss
@@ -2,13 +2,27 @@
 
 .footer {
   display: flex;
-  gap: 30px;
+  flex-direction: column;
+  align-items: center;
   margin-top: auto;
 }
 
-.icon {
+.text {
+  color: lightgray;
+  font-size: 20px;
+  letter-spacing: 1px;
+}
+
+.iconArea {
+  display: flex;
+  gap: 50px;
+}
+.iconContainer {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: 2px solid white;
   padding: 10px;
-  border: solid grey 2px;
   border-radius: 50%;
   opacity: 0.5;
   transition: opacity $transition;
@@ -19,18 +33,23 @@
       opacity: 1;
     }
   }
-
   &.linkedin {
     &:hover {
       background: linear-gradient(135deg, #0077b5, #00a0dc);
       opacity: 1;
     }
   }
-
   &.email {
     &:hover {
       background: linear-gradient(135deg, #ff0000, #ff8c00);
       opacity: 1;
     }
   }
+}
+.icon {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 35px;
+  height: 35px;
 }
