Home Page Mobile

--- a/src/components/home/HomePage.module.scss
+++ b/src/components/home/HomePage.module.scss
@@ -1,18 +1,5 @@
 @import '../Variables.scss';
 
-.textArea {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-
-.title {
-  color: white;
-  letter-spacing: 0.5px;
-  font-size: 42px;
-}
-
 .text {
   font-size: medium;
   text-align: center;
@@ -22,5 +9,11 @@
   width: $line-width;
   height: 1px;
   background-color: $white-text-hover;
-  margin: 20px 0;
+}
+
+.experiences {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 100px;
 }
