--- a/src/components/navbar/Navbar.module.scss
+++ b/src/components/navbar/Navbar.module.scss
@@ -5,10 +5,12 @@
   justify-content: center;
   align-items: center;
   padding: 30px;
-  gap: 50px;
 }
 .link {
-  font-size: 25px;
+  display: flex;
+  justify-content: center;
+  flex: 1;
+  font-size: 20px;
   font-weight: bold;
   letter-spacing: 1px;
   transition: $transition;
