--- a/src/components/navbar/Navbar.module.scss
+++ b/src/components/navbar/Navbar.module.scss
@@ -10,6 +10,7 @@
   display: flex;
   justify-content: center;
   flex: 1;
+  padding: 0px 10px;
   font-size: 20px;
   font-weight: bold;
   letter-spacing: 1px;
