Project cards almost complete

--- a/src/components/Variables.scss
+++ b/src/components/Variables.scss
@@ -2,6 +2,8 @@
 $app-background: #1c2331;
 $white-text-hover: #d9e6f2;
 $active-link: #4a98e0;
+$project-border: #3b4044;
+$grey-border: #6d7072;
 
 // ANIMATIONS
 
