--- a/src/components/home/HomePage.module.scss
+++ b/src/components/home/HomePage.module.scss
@@ -1,5 +1,11 @@
 @import '../Variables.scss';
 
+.head {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 .text {
   font-size: medium;
   text-align: center;
