projects page complete

--- a/src/components/Variables.scss
+++ b/src/components/Variables.scss
@@ -4,6 +4,8 @@ $white-text-hover: #d9e6f2;
 $active-link: #4a98e0;
 $project-border: #3b4044;
 $grey-border: #6d7072;
+$button-background: linear-gradient(to bottom right, #007bff, #0056b3);
+$github-gradient: linear-gradient(to bottom right, #6736c2, #000000);
 
 // ANIMATIONS
 
