--- a/src/components/projects/card/ProjectCard.module.scss
+++ b/src/components/projects/card/ProjectCard.module.scss
@@ -8,7 +8,6 @@
   border: 1px solid $project-border;
   flex: 1;
   border-radius: 15px;
-  gap: 10px;
 }
 .title {
   display: flex;
@@ -57,4 +56,10 @@
 .item {
   margin: 0;
   font-size: 20px;
+}
+.links {
+  display: flex;
+  justify-content: center;
+  padding-top: 30px;
+  gap: 20px;
 }
