functional contact page

--- a/src/components/common/buttons/MainButton.module.scss
+++ b/src/components/common/buttons/MainButton.module.scss
@@ -11,6 +11,7 @@
   transition: $transition;
   font-size: 20px;
   font-weight: bold;
+  color: white;
   text-decoration: none;
   background: $button-background;
   cursor: pointer;
