--- a/src/components/common/images/square/MainImage.module.scss
+++ b/src/components/common/images/square/MainImage.module.scss
@@ -1,9 +1,11 @@
 .mainImage {
-  object-fit: cover;
+  object-fit: contain;
   height: fit-content;
+  flex: 1;
 
   &.xSmall {
     width: 50px;
+    height: min-content;
   }
   &.small {
     width: 200px;
