--- a/src/components/about/section/Section.module.scss
+++ b/src/components/about/section/Section.module.scss
@@ -5,8 +5,24 @@
   flex-direction: column;
   align-items: center;
   text-align: center;
+  transition: $transition;
 }
 .title {
   color: $active-link;
   font-size: 40px;
+}
+
+@media (min-width: 768px) {
+  .rowContainer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  .section {
+    max-width: 700px;
+    font-size: 20px;
+  }
+  .title {
+    font-size: 50px;
+  }
 }
