--- a/src/components/home/HomePage.module.scss
+++ b/src/components/home/HomePage.module.scss
@@ -1,5 +1,14 @@
 @import '../Variables.scss';
 
+.pageContainer {
+  align-items: center;
+}
+.container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  max-width: 1000px;
+}
 .head {
   display: flex;
   flex-direction: column;
@@ -22,4 +31,10 @@
   flex-direction: column;
   align-items: center;
   gap: 100px;
+}
+
+@media (min-width: 768px) {
+  .text {
+    font-size: 18px;
+  }
 }
