--- a/src/components/home/textArea/TextArea.module.scss
+++ b/src/components/home/textArea/TextArea.module.scss
@@ -5,10 +5,17 @@
   flex-direction: column;
   align-items: center;
   gap: 20px;
+  font-size: 20px;
 }
 
 .title {
   color: $active-link;
   letter-spacing: 0.5px;
   font-size: 45px;
+}
+
+@media (max-width: 768px) {
+  .title {
+    font-size: 50px;
+  }
 }
