--- a/src/components/navbar/Navbar.module.scss
+++ b/src/components/navbar/Navbar.module.scss
@@ -9,10 +9,10 @@
 .link {
   display: flex;
   justify-content: center;
-  flex: 1;
   padding: 0px 10px;
   font-size: 20px;
   font-weight: bold;
+  flex: 1;
   letter-spacing: 1px;
   transition: $transition;
   &:hover {
@@ -20,5 +20,13 @@
   }
   &.active {
     color: $active-link;
+  }
+}
+
+@media (min-width: 768px) {
+  .link {
+    max-width: 200px;
+    font-size: 30px;
+    flex: 1;
   }
 }
